# srt-xtransmit

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  config.ini  flake.nix  macos_set_env.sh
.github/workflows/: ccpp.yml  codeql.yml  macos-ccpp.yml  ubuntu.yml
docker/: Dockerfile.alpine  Dockerfile.ubuntu  build_srt_xtransmit.sh
docs/: metrics.md  quic.md  socket-groups.md  uri-syntax.md
scripts/: plot_metrics.py  requirements.txt
scripts/output_example/: metrics.csv  metrics.html
xtransmit/: CMakeLists.txt  acceptor.hpp  bits.hpp  buffer.hpp  file-forward.cpp  file-receive.cpp  file-receive.hpp  file-send.cpp  file-send.hpp  forward.cpp  forward.h  generate.cpp  generate.hpp  ionode.hpp  metrics.cpp  metrics.hpp  metrics_delay_factor.cpp  metrics_delay_factor.hpp  metrics_integrity.hpp  metrics_jitter.cpp  metrics_jitter.hpp  metrics_latency.cpp  metrics_latency.hpp  metrics_reorder.hpp  metrics_writer.cpp  metrics_writer.hpp  misc.cpp  misc.hpp  mreceive.cpp  mreceive.hpp  netaddr_any.hpp  pacer.hpp  pkt_ack.hpp  pkt_base.cpp  pkt_base.hpp  pkt_data.hpp  pkt_view.hpp  quic_socket.cpp  quic_socket.hpp  receive.cpp  (+30 more)
